--- a/InspectionsDemo/Info.plist
+++ b/InspectionsDemo/Info.plist
@@ -4,6 +4,8 @@
 <dict>
 	<key>UIApplicationSceneManifest</key>
 	<dict>
+        <key>UIUserInterfaceStyle</key>
+        <string>Light</string>
 		<key>NSAppTransportSecurity</key>
 		<dict>
 			<key>NSAllowsArbitraryLoads</key>
